# TTRPGDataManager

./: .gitattributes  .gitignore  README back.md  README.md  config.toml  justfile  nuitka-crash-report.xml  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml
data/: config.toml  db.ddl  sample_encounters.yaml  sample_locations.yaml  sample_npc.yaml  settings.toml  sun_valleyish.json
data/db/: campaign.yaml  campaign_record.yaml  encounter.yaml  encounter_participants.yaml  image_store.yaml  location.yaml  npc.yaml  species.yaml
data/img/: desktop.ini
data/llm/: llamafile-0.9.3  sdfile-0.9.3
docs/: .~lock.presentation.pptx#  .~lock.presentation_new.pptx#  ERD.eps  Technology Wave Style Thesis Defense by Slidesgo.pptx  build.bat  commands.tex  erd.uml  format.tex  makeUML.bat  pandoc_run.bat  preamble.tex  prelimERD.eps  prelimERD.uml  presentation.d2  presentation.pptx  presentation_new.pptx  presentation_styled.pptx  presentation_text.pptx  presentation_unstyled.pptx  proposal.aux  proposal.out  proposal.tex
scripts/: apply_ppt_template.py  capture_ui_screens.py  create_env.py  generate_uml.py
src/final_project/: __init__.py  __main__.py  campaign_dialog.py  consts.py  db.py  dialogs.py  gui.py  llmrunner.py  logic.py  main.py  patch_beartype.py  patch_rich.py  pyphen_compat.py  settings_manager.py  widgets.py
src/ttrpgdataman/: __init__.py  __main__.py  campaign_dialog.py  consts.py  db.py  dialogs.py  gui.py  llmrunner.py  logic.py  main.py  patch_beartype.py  patch_rich.py  paths.py  settings_manager.py  widgets.py
tests/: conftest.py  test_coverage.py  test_db.py  test_db_integrity.py  test_dialogs.py  test_llmrunner.py  test_logic.py  test_settings_manager.py
