[project]
name = "final-project"
version = "2025.11.30.1"
description = "TTRPG Data Manager"
readme = "README.md"
authors = [
    { name = "rbroderi", email = "richard.broderick@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.22.5",
    "chafa-py>=1.2.0",
    "customtkinter>=5.2.2",
    "dotenv>=0.9.9",
    "gorilla>=0.4.0",
    "lazi>=1.9.161",
    "mistletoe>=1.5.0",
    "mysql-connector-python>=9.5.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.4",
    "pygments>=2.19.2",
    "pyphen>=0.17.2",
    "pyyaml>=6.0.2",
    "pyautogui>=0.9.54",
    "pywinstyles>=1.8; sys_platform == \"win32\"",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scikit-build>=0.18; sys_platform != \"win32\"",
    "hatchling>=1.26.0; sys_platform != \"win32\"",
    "sqlalchemy>=2.0.44",
    "structlog>=25.5.0",
    "tkfontawesome>=0.3.2",
    "tkhtmlview>=0.1.1.post1",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
optimize = [
    "mysqlclient>=2.2.7",
]
dev = [
    "mypy>=1.18.2",
    "pyautogui>=0.9.54",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "python-pptx>=1.0.2",
    "ruff>=0.14.5",
    "rust-just>=1.43.0",
    "types-pyautogui>=0.9.3.20241230",
    "types-pygments>=2.19.0.20251121",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
files = ["src/final_project"]
exclude = "./typings"
strict = true
follow_imports = "silent"
mypy_path = "./typings"

[[tool.mypy.overrides]]
module = "typings.*"
ignore_errors = true 
strict = false

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
# Enable all rules by default.
select = ["ALL"]

# Ignore specific rules.
ignore = [
    "TC006",
    "B024",
    "PIE790",
    "T201",
    "PYI013",
    "TC003",
    "PLC0414",
    "ERA001",
    "T203",
    "ANN401",
    "TC002",
    "TD002",
    "TD003",
    "FIX002",
    "FBT001",
    "FBT002",
    "D203",
    "D212",
    "S101",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in docstrings.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "ARG002",
    "ARG001",
    "ARG005",
    "SLF001",
]

[tool.pyproject.rules]
project-unknown-keys = "warning"
project-dependency-updates = { level = "hint" }
project-dependencies-version-bounds = "off"
project-requires-python-bounds = "off"


[tool.coverage.report]
exclude_also = [
    # 2. Comments to turn coverage on and off:
    'no cover: start(?s:.)*?no cover: stop',
    # 3. A pragma comment that excludes an entire file:
    '\A(?s:.*# pragma: exclude file.*)\Z',
]
